--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.1",
+    "axios": "^0.26.1",
+    "prettier": "2.6.0",
     "react": "17.0.2",
-    "react-native": "0.67.4"
+    "react-native": "0.67.4",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -19,6 +25,13 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.5.1",
     "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.69.1",
     "react-test-renderer": "17.0.2"
