--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.5.1",
     "axios": "^0.26.1",
     "prettier": "2.6.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-safe-area-context": "^4.2.2",
