--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.1",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
     "prettier": "2.6.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-maps": "0.30.1",
+    "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
