--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "0.30.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.2",
